@@ -1,0 +1,6 @@
+.\" Sccsid @(#)safe	1.1 (gritter) 12/4/05
+.rm sy
+.rm pi
+.rm pso
+.rm open
+.rm opena
